[gd_scene load_steps=56 format=3 uid="uid://c84k2nic04m2f"]

[ext_resource type="Script" uid="uid://6fhyrr88sb2c" path="res://scripts/entities/player.gd" id="1_3vyb7"]
[ext_resource type="PackedScene" uid="uid://dta6yp5rqtpys" path="res://scenes/health_component.tscn" id="2_qlg0r"]
[ext_resource type="PackedScene" uid="uid://ca33ngy3yd4jg" path="res://scenes/skills/skill_manager.tscn" id="2_smehm"]
[ext_resource type="PackedScene" uid="uid://bsgusnwvl6w5n" path="res://scenes/skills/ba1.tscn" id="2_ur7pv"]
[ext_resource type="PackedScene" uid="uid://cs56ppoyoum5u" path="res://scenes/animated_sprite.tscn" id="3_fjrip"]
[ext_resource type="PackedScene" uid="uid://ds0luiwx0s3vd" path="res://scenes/skills/ba2.tscn" id="3_qfm1y"]
[ext_resource type="PackedScene" uid="uid://dgx6lqroxutd5" path="res://scenes/health_bar.tscn" id="3_tuyoq"]
[ext_resource type="PackedScene" uid="uid://b1wxs7aphjf5e" path="res://scenes/skills/ba3.tscn" id="4_d2wvv"]
[ext_resource type="PackedScene" uid="uid://cvggagoyatlr8" path="res://scenes/skills/dash.tscn" id="5_d2wvv"]
[ext_resource type="PackedScene" uid="uid://ryr8eir3qxrd" path="res://scenes/hitbox_component.tscn" id="5_smehm"]
[ext_resource type="Texture2D" uid="uid://dkkqrhytt6xfd" path="res://assets/sheets/Attack1-Sheet.png" id="12_a8ls1"]
[ext_resource type="Texture2D" uid="uid://bxlghlgqxcvqg" path="res://assets/sheets/Attack2-Sheet.png" id="13_qfm1y"]
[ext_resource type="Texture2D" uid="uid://cdnp8oxam41nx" path="res://assets/sheets/Take Hit-Sheet.png" id="14_fulsm"]
[ext_resource type="Texture2D" uid="uid://dsueqgaejl8ib" path="res://assets/sheets/Idle-Sheet.png" id="15_4r5pv"]
[ext_resource type="Texture2D" uid="uid://w0sejexvuk8f" path="res://assets/sheets/Run-Sheet.png" id="16_60mlk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjrip"]
radius = 16.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_smehm"]
radius = 6.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("12_a8ls1")
region = Rect2(0, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("12_a8ls1")
region = Rect2(120, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("12_a8ls1")
region = Rect2(240, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("12_a8ls1")
region = Rect2(360, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("12_a8ls1")
region = Rect2(480, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("12_a8ls1")
region = Rect2(600, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("12_a8ls1")
region = Rect2(720, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("13_qfm1y")
region = Rect2(0, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("13_qfm1y")
region = Rect2(120, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("13_qfm1y")
region = Rect2(240, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("13_qfm1y")
region = Rect2(360, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("13_qfm1y")
region = Rect2(480, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("13_qfm1y")
region = Rect2(600, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vau08"]
atlas = ExtResource("13_qfm1y")
region = Rect2(720, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsb7e"]
atlas = ExtResource("14_fulsm")
region = Rect2(0, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjsmb"]
atlas = ExtResource("14_fulsm")
region = Rect2(120, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwp2n"]
atlas = ExtResource("14_fulsm")
region = Rect2(240, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yhus"]
atlas = ExtResource("14_fulsm")
region = Rect2(360, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlll7"]
atlas = ExtResource("15_4r5pv")
region = Rect2(0, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6i7"]
atlas = ExtResource("15_4r5pv")
region = Rect2(120, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3st"]
atlas = ExtResource("15_4r5pv")
region = Rect2(240, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1da1t"]
atlas = ExtResource("15_4r5pv")
region = Rect2(360, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p21yu"]
atlas = ExtResource("15_4r5pv")
region = Rect2(480, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_irpag"]
atlas = ExtResource("15_4r5pv")
region = Rect2(600, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpsgo"]
atlas = ExtResource("15_4r5pv")
region = Rect2(720, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx8is"]
atlas = ExtResource("15_4r5pv")
region = Rect2(840, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx63k"]
atlas = ExtResource("15_4r5pv")
region = Rect2(960, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw0jh"]
atlas = ExtResource("15_4r5pv")
region = Rect2(1080, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry8ed"]
atlas = ExtResource("15_4r5pv")
region = Rect2(1200, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_au8ao"]
atlas = ExtResource("16_60mlk")
region = Rect2(0, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5j5w"]
atlas = ExtResource("16_60mlk")
region = Rect2(120, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbf1i"]
atlas = ExtResource("16_60mlk")
region = Rect2(240, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vfid"]
atlas = ExtResource("16_60mlk")
region = Rect2(360, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljgr3"]
atlas = ExtResource("16_60mlk")
region = Rect2(480, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fr8ja"]
atlas = ExtResource("16_60mlk")
region = Rect2(600, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvmy4"]
atlas = ExtResource("16_60mlk")
region = Rect2(720, 0, 120, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcu33"]
atlas = ExtResource("16_60mlk")
region = Rect2(840, 0, 120, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fjrip"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vau08")
}],
"loop": true,
"name": &"attack2",
"speed": 15.0
}, {
"frames": [],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsb7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjsmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwp2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yhus")
}],
"loop": false,
"name": &"hit",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlll7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1da1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p21yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irpag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpsgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx8is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx63k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw0jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry8ed")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_au8ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5j5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbf1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vfid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljgr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fr8ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvmy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcu33")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
collision_mask = 8
script = ExtResource("1_3vyb7")
deceleration_factor = 15.0

[node name="Skills" type="Node" parent="."]

[node name="BA1" parent="Skills" instance=ExtResource("2_ur7pv")]

[node name="BA2" parent="Skills" instance=ExtResource("3_qfm1y")]

[node name="BA3" parent="Skills" instance=ExtResource("2_ur7pv")]

[node name="BA4" parent="Skills" instance=ExtResource("4_d2wvv")]

[node name="Dash" parent="Skills" instance=ExtResource("5_d2wvv")]

[node name="SkillManagerComponent" parent="." instance=ExtResource("2_smehm")]
max_skill_slots = 2

[node name="HitboxComponent" parent="." instance=ExtResource("5_smehm")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_fjrip")

[node name="Timers" type="Node" parent="."]

[node name="HitTimer" type="Timer" parent="Timers"]

[node name="BATimer" type="Timer" parent="Timers"]
one_shot = true
ignore_time_scale = true

[node name="DashTimer" type="Timer" parent="Timers"]
one_shot = true
ignore_time_scale = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_smehm")

[node name="Health Component" parent="." instance=ExtResource("2_qlg0r")]

[node name="HealthBar" parent="Health Component" instance=ExtResource("3_tuyoq")]
position = Vector2(0, -27)

[node name="CharacterSpriteComponent" parent="." instance=ExtResource("3_fjrip")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterSpriteComponent"]
sprite_frames = SubResource("SpriteFrames_fjrip")
animation = &"walk"

[connection signal="timeout" from="Timers/BATimer" to="." method="_on_ba_timer_timeout"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="animation_finished" from="CharacterSpriteComponent/AnimatedSprite2D" to="CharacterSpriteComponent" method="_on_animation_finished"]
